--- a/1v1-lol-offline/index.html
+++ b/1v1-lol-offline/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1v1 LOL Offline Unblocked</title>
-    <meta name="description" content="1v1 LOL Offline Unblocked is your personal training ground. Practice your building and editing skills without pressure. Master the mechanics of this unblocked game.">
+    <title>1v1 LOL Offline Unblocked | Practice Building & Shooting at FAF Games</title>
+    <meta name="description" content="Play 1v1 LOL Offline Unblocked at FAF Games. Train your shooting, building, and editing skills in this free unblocked mode perfect for improving before real 1v1 battles.">
     <meta name="keywords" content="1v1 lol offline, 1v1 lol offline unblocked, building game, training, practice, shooter, unblocked games">
-    <link rel="canonical" href="https://onlyszgames.github.io/1v1-lol-offline" />
+    <link rel="canonical" href="https://fafgamess.github.io/1v1-lol-offline" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="1v1 LOL Offline Unblocked ⟐ Build Practice" />
-    <meta property="og:description" content="1v1 LOL Offline Unblocked is your personal training ground. Practice your building and editing skills without pressure. Master the mechanics of this unblocked game." />
-    <meta property="og:url" content="https://onlyszgames.github.io/1v1-lol-offline" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/1v1-lol-offline.png" />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="1v1 LOL Offline Unblocked | Practice Building & Shooting at FAF Games" />
+    <meta property="og:description" content="Play 1v1 LOL Offline Unblocked at FAF Games. Train your shooting, building, and editing skills in this free unblocked mode perfect for improving before real 1v1 battles." />
+    <meta property="og:url" content="https://fafgamess.github.io/1v1-lol-offline" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/1v1-lol-offline.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@OnlySZGames">
-    <meta name="twitter:title" content="1v1 LOL Offline Unblocked ⟐ Build Practice">
-    <meta name="twitter:description" content="1v1 LOL Offline Unblocked is your personal training ground. Practice your building and editing skills without pressure. Master the mechanics of this unblocked game.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/1v1-lol-offline.png">
+    <meta name="twitter:site" content="@FAFgames">
+    <meta name="twitter:title" content="1v1 LOL Offline Unblocked | Practice Building & Shooting at FAF Games">
+    <meta name="twitter:description" content="Play 1v1 LOL Offline Unblocked at FAF Games. Train your shooting, building, and editing skills in this free unblocked mode perfect for improving before real 1v1 battles.">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/1v1-lol-offline.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "1v1 LOL Offline Training Mode",
-        "url": "https://onlyszgames.github.io/1v1-lol-offline",
-        "description": "1v1 LOL Offline Unblocked is your personal training ground. Practice your building and editing skills without pressure. Master the mechanics of this unblocked game.",
+        "url": "https://fafgamess.github.io/1v1-lol-offline",
+        "description": "Play 1v1 LOL Offline Unblocked at FAF Games. Train your shooting, building, and editing skills in this free unblocked mode perfect for improving before real 1v1 battles.",
         "genre": "Action",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/1v1-lol-offline.png"
+        "image": "https://fafgamess.github.io/img/1v1-lol-offline.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -435,8 +435,8 @@ justify-content: center;}
         
 
         <div class="game-header" style="background-color: #00897B;">
-            <h1>1v1 LOL Offline Training Mode</h1>
-            <p>Master your skills in 1v1 LOL Offline Unblocked. This is the perfect training mode to practice your building, editing, and shooting. Get ready for the real online battles.</p>
+            <h1>🧱 1v1 LOL Offline Training Mode</h1>
+            <p>1v1 LOL Offline Unblocked is the ultimate way to sharpen your skills before jumping into online matches. This free offline mode lets you master building, editing, and shooting without any lag or distractions. Whether you’re on FAF Games, GitHub.io, or other Unblocked Games sites, you can play anytime with no login or download required.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="1v1-lol-offline">
@@ -456,10 +456,10 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/1v1-lol-offline.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/1v1-lol-offline.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
-                    <div class="play-text">Play 1v1 LOL Offline Training Mode</div>
+                    <div class="play-text">1v1 LOL Offline Training Mode</div>
                 </div>
                 <iframe class="game-frame" src="about:blank" data-src="https://iframe.unblocked-76-games.org/1v1-lol-offline-main" id="gameFrame" allowfullscreen></iframe>
  <button class="fullscreen-btn" id="fullscreenBtn">
@@ -469,9 +469,9 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/1v1-lol-offline.png" alt="1v1 LOL Offline Training Mode
+            <img src="https://fafgamess.github.io/img/1v1-lol-offline.png" alt="1v1 LOL Offline Training Mode
 Gameplay" class="game-description-image" title="1v1 LOL Offline Training Mode">
-            <h2>🧱 About 1v1 LOL Offline</h2><p>1v1 LOL Offline is the perfect practice tool for the popular online building-shooter. This game provides you with an offline sandbox where you can hone your skills. There are no real opponents. Your goal is to practice your '90s', edit-downs, and aim. This is where you build muscle memory. This 1v1 LOL Offline unblocked version is essential for anyone who wants to get better at the online game. You can experiment with different building techniques without the pressure of being in a real fight.</p><h2>🎮 Game Features in 1v1 LOL Offline</h2><p>This game is a dedicated training simulation. The features are all about skill improvement.</p><ul><li>An offline sandbox environment for practice.</li><li>All building pieces (wall, ramp, floor, cone) are available.</li><li>Practice your editing skills.</li><li>No opponents, just freedom to build.</li></ul><p>Playing 1v1 LOL Offline unblocked is the key to becoming a pro.</p><h2>🕹️ How to Play 1v1 LOL Offline</h2><p>The controls are identical to the online version. Use WASD to move and Space to jump. Use the mouse to look and fire. Use Z, X, C, V for your building pieces. Press F to edit. The goal is to practice. Try to build a 1v1 ramp rush as fast as you can. Practice editing a window in a wall and shooting through it. There is no winning or losing. This 1v1 LOL Offline unblocked game is your personal gym.</p>
+            <h2>🎯 About 1v1 LOL Offline</h2><p>1v1 LOL Offline is designed as a pure training mode for players who want to improve in the popular online building-shooter. It gives you a sandbox environment where you can practice building techniques and shooting precision. There are no real opponents here, just you, your reflexes, and your creativity. It’s the perfect place to master “90s,” quick edits, and aim tracking. This 1v1 LOL Unblocked version helps you prepare for the real game, build muscle memory, and experiment freely without pressure.</p><h2>🎮 Game Features in 1v1 LOL Offline</h2><p>This offline version focuses entirely on helping players train and improve their gameplay.</p><ul><li>Practice freely in a lag-free sandbox mode</li><li>All building pieces: wall, ramp, floor, and cone</li><li>Improve your editing and shooting skills</li><li>No opponents just open practice space</li></ul><p>Playing 1v1 LOL Unblocked offline helps you become a better player before entering competitive matches.</p><h2>🕹️ How to Play 1v1 LOL Offline</h2><p>The controls in 1v1 LOL Offline Unblocked are simple, yet mastering them takes focus and repetition. Use W, A, S, D to move around and Spacebar to jump. The mouse helps you aim and shoot precisely, while Z, X, C, V are used to build different structures like walls, ramps, floors, and cones. Press F to edit your builds and refine your creations quickly. The main goal in this offline version isn’t to win but to train and improve your skills. Practice fast 1v1 ramp rushes, edit windows in walls, and shoot through them to simulate real battle situations. This 1v1 LOL Offline Unblocked mode serves as your personal training arena build, edit, and enhance your reflexes at your own pace.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -532,7 +532,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/bumper-cars-soccer" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bumper-cars-soccer.png" alt="Bumper Cars Soccer Mayhem">
+                                <img src="https://fafgamess.github.io/img/bumper-cars-soccer.png" alt="Bumper Cars Soccer Mayhem">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bumper Cars Soccer Mayhem</h3>
@@ -543,7 +543,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/fruit-ninja" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/fruit-ninja.png" alt="Fruit Ninja Classic Slicing Game">
+                                <img src="https://fafgamess.github.io/img/fruit-ninja.png" alt="Fruit Ninja Classic Slicing Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Fruit Ninja Classic Slicing Game</h3>
@@ -554,7 +554,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/tag" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tag.png" alt="Tag">
+                                <img src="https://fafgamess.github.io/img/tag.png" alt="Tag">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tag</h3>
@@ -565,7 +565,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/total-recoil" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/total-recoil.png" alt="Total Recoil The Ultimate Action Shooter">
+                                <img src="https://fafgamess.github.io/img/total-recoil.png" alt="Total Recoil The Ultimate Action Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Total Recoil The Ultimate Action Shooter</h3>
@@ -576,7 +576,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/kart-bros" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/kart-bros.png" alt="Kart Bros">
+                                <img src="https://fafgamess.github.io/img/kart-bros.png" alt="Kart Bros">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Kart Bros</h3>
@@ -587,7 +587,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/a-small-world-cup" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/a-small-world-cup.png" alt="A Small World Cup The Wacky Physics Soccer Game">
+                                <img src="https://fafgamess.github.io/img/a-small-world-cup.png" alt="A Small World Cup The Wacky Physics Soccer Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">A Small World Cup The Wacky Physics Soccer Game</h3>
@@ -598,7 +598,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/zombie-derby-pixel-survival" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/zombie-derby-pixel-survival.png" alt="Zombie Derby Pixel Survival Driver">
+                                <img src="https://fafgamess.github.io/img/zombie-derby-pixel-survival.png" alt="Zombie Derby Pixel Survival Driver">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Zombie Derby Pixel Survival Driver</h3>
@@ -609,7 +609,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/air-toons" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/air-toons.png" alt="Air Toons Multiplayer Dogfights">
+                                <img src="https://fafgamess.github.io/img/air-toons.png" alt="Air Toons Multiplayer Dogfights">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Air Toons Multiplayer Dogfights</h3>
@@ -620,7 +620,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/slope" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/slope.png" alt="Slope">
+                                <img src="https://fafgamess.github.io/img/slope.png" alt="Slope">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Slope</h3>
@@ -631,7 +631,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/stickman-climb-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-climb-2.png" alt="Stickman Climb 2 Grappling Fun">
+                                <img src="https://fafgamess.github.io/img/stickman-climb-2.png" alt="Stickman Climb 2 Grappling Fun">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Climb 2 Grappling Fun</h3>
@@ -642,7 +642,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/idle-mining-empire" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/idle-mining-empire.png" alt="Idle Mining Empire A Tycoon Clicker Game">
+                                <img src="https://fafgamess.github.io/img/idle-mining-empire.png" alt="Idle Mining Empire A Tycoon Clicker Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Idle Mining Empire A Tycoon Clicker Game</h3>
@@ -653,7 +653,7 @@ class="category-tag-item" style="background-color: #FF1744;">
                     <div class="game-card">
                         <a href="/iron-snout" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/iron-snout.png" alt="Iron Snout The Ultimate Pig Fighter">
+                                <img src="https://fafgamess.github.io/img/iron-snout.png" alt="Iron Snout The Ultimate Pig Fighter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Iron Snout The Ultimate Pig Fighter</h3>
@@ -710,8 +710,8 @@ class="category-tag-item" style="background-color: #FF1744;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Discover the best FAF Games Unblocked right here! Enjoy your favorite titles instantly at school or work no downloads, no limits, just pure fun in your browser.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -723,7 +723,7 @@ class="category-tag-item" style="background-color: #FF1744;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
