--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ class="logo">
     <div class="container">
         <div class="hero-header">
             <h1>🎮 Play Unblocked Games Online on GitHub.io</h1>
-<p>AWelcome to FAF Games, your ultimate destination to play the best unblocked games online on GitHub.io, anytime, anywhere! Whether you're at school, work, or just relaxing at home, our platform lets you enjoy your favorite games without any restrictions or downloads. At FAF Games, we believe gaming should be fun, fast, and free. That’s why we’ve hand-picked the most exciting and trending unblocked browser games on GitHub.io loved by players worldwide. From intense shooting battles to quick reflex challenges, there’s something for everyone!</p>
+<p>Welcome to FAF Games, your ultimate destination to play the best unblocked games online on GitHub.io, anytime, anywhere! Whether you're at school, work, or just relaxing at home, our platform lets you enjoy your favorite games without any restrictions or downloads. At FAF Games, we believe gaming should be fun, fast, and free. That’s why we’ve hand-picked the most exciting and trending unblocked browser games on GitHub.io loved by players worldwide. From intense shooting battles to quick reflex challenges, there’s something for everyone!</p>
   <p>⚡ One click. Instant fun. Unlimited access.</p>
         </div>
 
